# server/api/gen/go/app/shop_service_http.pb.go
@@ -1,79 +1,0 @@
-// Code generated by protoc-gen-go-http. DO NOT EDIT.
-// versions:
-// - protoc-gen-go-http v2.9.2
-// - protoc             (unknown)
-// source: app/shop_service.proto
-
-package app
-
-import (
-	context "context"
-	http "github.com/go-kratos/kratos/v2/transport/http"
-	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
-	emptypb "google.golang.org/protobuf/types/known/emptypb"
-)
-
-// This is a compile-time assertion to ensure that this generated file
-// is compatible with the kratos package it is being compiled against.
-var _ = new(context.Context)
-var _ = binding.EncodeURL
-
-const _ = http.SupportPackageIsVersion1
-
-const OperationShopServiceServiceListShopService = "/app.ShopServiceService/ListShopService"
-
-type ShopServiceServiceHTTPServer interface {
-	// ListShopService 查询商城服务列表
-	ListShopService(context.Context, *emptypb.Empty) (*ListShopServiceResponse, error)
-}
-
-func RegisterShopServiceServiceHTTPServer(s *http.Server, srv ShopServiceServiceHTTPServer) {
-	r := s.Route("/")
-	r.GET("/api/app/shop/service", _ShopServiceService_ListShopService0_HTTP_Handler(srv))
-}
-
-func _ShopServiceService_ListShopService0_HTTP_Handler(srv ShopServiceServiceHTTPServer) func(ctx http.Context) error {
-	return func(ctx http.Context) error {
-		var in emptypb.Empty
-		if err := ctx.BindQuery(&in); err != nil {
-			return err
-		}
-		http.SetOperation(ctx, OperationShopServiceServiceListShopService)
-		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
-			return srv.ListShopService(ctx, req.(*emptypb.Empty))
-		})
-		out, err := h(ctx, &in)
-		if err != nil {
-			return err
-		}
-		reply := out.(*ListShopServiceResponse)
-		return ctx.Result(200, reply)
-	}
-}
-
-type ShopServiceServiceHTTPClient interface {
-	// ListShopService 查询商城服务列表
-	ListShopService(ctx context.Context, req *emptypb.Empty, opts ...http.CallOption) (rsp *ListShopServiceResponse, err error)
-}
-
-type ShopServiceServiceHTTPClientImpl struct {
-	cc *http.Client
-}
-
-func NewShopServiceServiceHTTPClient(client *http.Client) ShopServiceServiceHTTPClient {
-	return &ShopServiceServiceHTTPClientImpl{client}
-}
-
-// ListShopService 查询商城服务列表
-func (c *ShopServiceServiceHTTPClientImpl) ListShopService(ctx context.Context, in *emptypb.Empty, opts ...http.CallOption) (*ListShopServiceResponse, error) {
-	var out ListShopServiceResponse
-	pattern := "/api/app/shop/service"
-	path := binding.EncodeURL(pattern, in, true)
-	opts = append(opts, http.Operation(OperationShopServiceServiceListShopService))
-	opts = append(opts, http.PathTemplate(pattern))
-	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return &out, nil
-}
